# rc-switch-lib

./: .gitignore  CMakeLists.txt  RCSwitch.cpp  RCSwitch.h  README.md  example.cpp  uninstall.cmake
.github/workflows/: BuildTest.yml
